exports[`Storyshots Color With color=#8ccc62 (Green) value=7.5 and max=10 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    className="terra-ProgressBar terra-ProgressBar--small"
    color="#8ccc62"
    max={100}
    style={
      Object {
        "color": "#8ccc62",
      }
    }
    tabIndex="-1"
    value={75} />
</span>
`;

exports[`Storyshots Color With color=Orange value=5 and max=10 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    className="terra-ProgressBar terra-ProgressBar--small"
    color="Orange"
    max={100}
    style={
      Object {
        "color": "Orange",
      }
    }
    tabIndex="-1"
    value={50} />
</span>
`;

exports[`Storyshots Color With color=rgb(255, 0, 0) (Red) value=10 and max=10 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="terra-ProgressBar terra-ProgressBar--small"
    color="rgb(255, 0, 0)"
    max={100}
    style={
      Object {
        "color": "rgb(255, 0, 0)",
      }
    }
    tabIndex="-1"
    value={100} />
</span>
`;

exports[`Storyshots Custom Props Default height, 4 of 12 = 33.3% fill with title attribute 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33.33333333333333}
    className="terra-ProgressBar terra-ProgressBar--small"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    title="ProgressBarTest"
    value={33.33333333333333} />
</span>
`;

exports[`Storyshots Size Huge - 75% 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    className="terra-ProgressBar terra-ProgressBar--huge"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    value={75} />
</span>
`;

exports[`Storyshots Size Large - 60% 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={60}
    className="terra-ProgressBar terra-ProgressBar--large"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    value={60} />
</span>
`;

exports[`Storyshots Size Medium - 45% 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={45}
    className="terra-ProgressBar terra-ProgressBar--medium"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    value={45} />
</span>
`;

exports[`Storyshots Size Small (Default) - 30% 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={30}
    className="terra-ProgressBar terra-ProgressBar--small"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    value={30} />
</span>
`;

exports[`Storyshots Size Tiny - 15% 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={15}
    className="terra-ProgressBar terra-ProgressBar--tiny"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    value={15} />
</span>
`;

exports[`Storyshots TerraProgressBar  Without props 1`] = `
<span>
  <progress
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={0}
    className="terra-ProgressBar terra-ProgressBar--small"
    color="#007cc3"
    max={100}
    style={
      Object {
        "color": "#007cc3",
      }
    }
    tabIndex="-1"
    value={0} />
</span>
`;

exports[`test should render a ProgressBar component with default height 50% fill and custom props and style 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="terra-ProgressBar terra-ProgressBar--small"
  color="#007cc3"
  dir="rtl"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={50} />
`;

exports[`test should render a ProgressBar component with large height and 60% fill 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={60}
  className="terra-ProgressBar terra-ProgressBar--large"
  color="#007cc3"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={60} />
`;

exports[`test should render a ProgressBar component with tiny height and 15% fill 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={15}
  className="terra-ProgressBar terra-ProgressBar--tiny"
  color="#007cc3"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={15} />
`;

exports[`test should render a default component 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="terra-ProgressBar terra-ProgressBar--small"
  color="#007cc3"
  max={100}
  style={
    Object {
      "color": "#007cc3",
    }
  }
  tabIndex="-1"
  value={0} />
`;
